[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
]

[project]
name = "nscap"
version = "0.0.0"
description = ""
authors = [{ name = "alan910127", email = "alan469357@gmail.com" }]
dependencies = [
    "ipykernel>=6.22.0",
    "matplotlib>=3.7.1",
]
requires-python = ">=3.8"
license = { text = "MIT" }
